[gd_scene load_steps=41 format=3 uid="uid://bhs0tcq33s1sc"]

[ext_resource type="Texture2D" uid="uid://c08s16xa2r7wh" path="res://Assets/icon.svg" id="1_0qo5a"]
[ext_resource type="Texture2D" uid="uid://bd4oj4a0ttgxf" path="res://Assets/Background/Clouds.png" id="3_i6grk"]
[ext_resource type="Shader" uid="uid://d4f40oblnyfg0" path="res://Shaders/shiny.gdshader" id="4_35a4y"]
[ext_resource type="Texture2D" uid="uid://b3r3iqfyl71tp" path="res://Assets/Background/Hills.png" id="4_i6grk"]
[ext_resource type="Texture2D" uid="uid://bcdpgqnn3ymdo" path="res://Assets/Background/Mountains.png" id="5_7wpht"]
[ext_resource type="Script" uid="uid://dy12jc5lwfsjh" path="res://Scripts/Utils/Selectable.gd" id="5_gv2ab"]
[ext_resource type="Texture2D" uid="uid://c1icpnkjpwirg" path="res://Assets/Objects/Cliff.png" id="6_i6grk"]
[ext_resource type="Script" uid="uid://cvp73h1iqxaof" path="res://Scripts/AttributeEditor.gd" id="6_j81f7"]
[ext_resource type="Script" uid="uid://r5pp0sf067jp" path="res://Scripts/Object/square.gd" id="7_m1u6v"]
[ext_resource type="Texture2D" uid="uid://brac0nym6yjvh" path="res://Assets/Objects/NoEntry.png" id="7_pddq8"]
[ext_resource type="Script" uid="uid://bdd460m5b8pte" path="res://Scripts/SelectedManager.gd" id="9_kt8cb"]
[ext_resource type="PackedScene" uid="uid://c33s207brjvog" path="res://Scenes/Utils/Godray.tscn" id="11_2js3y"]
[ext_resource type="PackedScene" uid="uid://cakt5wbo6p32p" path="res://Scenes/Utils/interactable.tscn" id="12_kt8cb"]
[ext_resource type="PackedScene" uid="uid://dcbc26gk3t6db" path="res://Scenes/Entity/NPC.tscn" id="14_j81f7"]
[ext_resource type="Script" uid="uid://cgj3geefma26i" path="res://Scripts/InteractionManager.gd" id="14_m1u6v"]
[ext_resource type="PackedScene" uid="uid://cherfw86xm8pm" path="res://Scenes/Entity/Player.tscn" id="15_m1u6v"]
[ext_resource type="Script" uid="uid://7hud6wwm12en" path="res://Scripts/DialogManager.gd" id="15_pxbtr"]
[ext_resource type="Script" uid="uid://dyprl6i7cqri1" path="res://Scripts/Object/Cloud.gd" id="17_pddq8"]
[ext_resource type="Script" uid="uid://br3yjoye3jsd8" path="res://Scripts/Object/Killzone.gd" id="19_i6grk"]
[ext_resource type="Texture2D" uid="uid://by0ie0wjc3dna" path="res://Assets/Objects/FallenBridge.png" id="20_7wpht"]
[ext_resource type="Texture2D" uid="uid://c5k1uluvqvrsf" path="res://Assets/Objects/Bush.png" id="21_t30v0"]
[ext_resource type="Texture2D" uid="uid://c07j2oono3xkc" path="res://Assets/Objects/TownSign.png" id="22_qieib"]
[ext_resource type="Script" uid="uid://v3c6bacceoas" path="res://Scripts/Object/MovingPlatform.gd" id="23_2js3y"]
[ext_resource type="Texture2D" uid="uid://dqp1um4bde6ys" path="res://Assets/Objects/FloatingPlatform.png" id="23_l7uws"]
[ext_resource type="PackedScene" uid="uid://5saakwih171l" path="res://Scenes/Utils/IntEdit.tscn" id="25_2upgb"]
[ext_resource type="PackedScene" uid="uid://cn6yrffukexnr" path="res://Scenes/Utils/FloatEdit.tscn" id="26_ee4y7"]
[ext_resource type="PackedScene" uid="uid://tsy8jgk2v45t" path="res://Scenes/Utils/StringEdit.tscn" id="27_rlwgt"]
[ext_resource type="PackedScene" uid="uid://d4efbfhca0655" path="res://Scenes/Utils/BooleanEdit.tscn" id="28_4nfaa"]

[sub_resource type="Theme" id="Theme_pddq8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kt8cb"]
size = Vector2(20, 1000)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujg4g"]
size = Vector2(2311, 216)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8qhx"]
size = Vector2(127.458, 126.554)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1iqnk"]
shader = ExtResource("4_35a4y")
shader_parameter/shine_num = 8.0
shader_parameter/rotation_speed = 3.0
shader_parameter/light_magnitude = 2.0
shader_parameter/filter_distence = 1.0
shader_parameter/filter_magnitude = 1.0
shader_parameter/filter_minv = 0.75
shader_parameter/cut_inner_radius = 0.1
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/NOISE_speed = Vector2(0, 0)
shader_parameter/NOISE_magnitude = 0.0

[sub_resource type="CanvasTexture" id="CanvasTexture_i8qhx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pddq8"]
size = Vector2(999999, 20)

[sub_resource type="Gradient" id="Gradient_36yee"]
offsets = PackedFloat32Array(0.209459, 0.625)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t30v0"]
gradient = SubResource("Gradient_36yee")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2js3y"]
size = Vector2(581.16, 147)

[sub_resource type="Theme" id="Theme_eue4q"]

[sub_resource type="Theme" id="Theme_ja7de"]

[node name="POC" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 0
theme = SubResource("Theme_pddq8")
script = ExtResource("6_j81f7")
metadata/_edit_use_anchors_ = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_offset = Vector2(-960, -540)
scroll_ignore_camera_zoom = true

[node name="Hills" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -2
position = Vector2(0, -250)
motion_scale = Vector2(0.4, 0.4)
motion_offset = Vector2(0, 500)
motion_mirroring = Vector2(1920, 0)

[node name="Layer05Hills" type="Sprite2D" parent="ParallaxBackground/Hills"]
texture = ExtResource("4_i6grk")
centered = false

[node name="Clouds" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -3
position = Vector2(0, -250)
motion_scale = Vector2(0.2, 0.2)
motion_offset = Vector2(0, 200)
motion_mirroring = Vector2(1920, 0)
script = ExtResource("17_pddq8")
speed = -10.0

[node name="Layer04Clouds" type="Sprite2D" parent="ParallaxBackground/Clouds"]
texture = ExtResource("3_i6grk")
centered = false

[node name="Mountains" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -4
position = Vector2(0, -250)
motion_scale = Vector2(0.1, 0.1)
motion_offset = Vector2(0, 250)
motion_mirroring = Vector2(1920, 0)

[node name="Layer06Rocks" type="Sprite2D" parent="ParallaxBackground/Mountains"]
texture = ExtResource("5_7wpht")
centered = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]
z_index = -10
position = Vector2(-335.5, 87)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
light_mask = 3
texture = ExtResource("6_i6grk")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1111.5, -387)
shape = SubResource("RectangleShape2D_kt8cb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-92, 148)
shape = SubResource("RectangleShape2D_ujg4g")

[node name="Square" type="Area2D" parent="."]
visible = false
position = Vector2(-669, -202)
scale = Vector2(1.10625, 1.10625)
script = ExtResource("7_m1u6v")

[node name="Sprite" type="Sprite2D" parent="Square"]
z_index = -2
texture = ExtResource("1_0qo5a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Square"]
position = Vector2(0.451965, 6.10352e-05)
shape = SubResource("RectangleShape2D_i8qhx")

[node name="Selectable" type="Sprite2D" parent="Square"]
visible = false
z_index = -3
material = SubResource("ShaderMaterial_1iqnk")
scale = Vector2(228.871, 228.871)
texture = SubResource("CanvasTexture_i8qhx")
script = ExtResource("5_gv2ab")

[node name="Label" type="Label" parent="Square"]
z_index = -2
offset_left = -159.096
offset_top = -94.0113
offset_right = 169.904
offset_bottom = -71.0113
text = "a"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Godrays" parent="Square" instance=ExtResource("11_2js3y")]

[node name="Interactable" parent="Square" instance=ExtResource("12_kt8cb")]

[node name="NPC" parent="." instance=ExtResource("14_j81f7")]
position = Vector2(335, -127)
dialogFile = "res://Dialog/FallenBridge.json"

[node name="Killzone" type="Area2D" parent="."]
position = Vector2(0, 600)
script = ExtResource("19_i6grk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
shape = SubResource("RectangleShape2D_pddq8")

[node name="Objects" type="Node2D" parent="."]
z_index = -2

[node name="NoEntry" type="Sprite2D" parent="Objects"]
position = Vector2(-1520, 16)
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_pddq8")

[node name="PointLight2D" type="PointLight2D" parent="Objects/NoEntry"]
show_behind_parent = true
z_index = -10
position = Vector2(0, 120.667)
scale = Vector2(0.824374, 0.228094)
energy = 0.5
blend_mode = 1
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_t30v0")

[node name="FallenBridge" type="Sprite2D" parent="Objects"]
position = Vector2(682, 82)
texture = ExtResource("20_7wpht")

[node name="PointLight2D" type="PointLight2D" parent="Objects/FallenBridge"]
show_behind_parent = true
z_index = -10
position = Vector2(-14, 41)
scale = Vector2(0.824374, 0.228094)
energy = 0.5
blend_mode = 1
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_t30v0")

[node name="PointLight2D2" type="PointLight2D" parent="Objects/FallenBridge"]
show_behind_parent = true
z_index = -10
position = Vector2(86, -45)
scale = Vector2(0.824374, 0.228094)
energy = 0.5
blend_mode = 1
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_t30v0")

[node name="Bush" type="Sprite2D" parent="Objects"]
position = Vector2(185, -140)
texture = ExtResource("21_t30v0")

[node name="PointLight2D" type="PointLight2D" parent="Objects/Bush"]
show_behind_parent = true
z_index = -10
position = Vector2(2, 78)
scale = Vector2(5.1175, 1.20619)
energy = 0.5
blend_mode = 1
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_t30v0")

[node name="TownSign" type="Sprite2D" parent="Objects"]
position = Vector2(627, -197)
texture = ExtResource("22_qieib")

[node name="PointLight2D" type="PointLight2D" parent="Objects/TownSign"]
show_behind_parent = true
z_index = -10
position = Vector2(-9.99997, 142)
scale = Vector2(1.12313, 0.364047)
energy = 0.5
blend_mode = 1
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_t30v0")

[node name="FloatingPlatform" type="AnimatableBody2D" parent="."]
position = Vector2(1194, 163)
input_pickable = true
sync_to_physics = false
script = ExtResource("23_2js3y")
metadata/objectName = "Convenient Platform"
metadata/Interactable = true

[node name="Sprite" type="Sprite2D" parent="FloatingPlatform"]
light_mask = 3
texture = ExtResource("23_l7uws")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloatingPlatform"]
position = Vector2(0, 37.5)
shape = SubResource("RectangleShape2D_2js3y")

[node name="Selectable" type="Sprite2D" parent="FloatingPlatform"]
visible = false
z_index = -3
material = SubResource("ShaderMaterial_1iqnk")
scale = Vector2(600, 600)
texture = SubResource("CanvasTexture_i8qhx")
script = ExtResource("5_gv2ab")

[node name="Player" parent="." instance=ExtResource("15_m1u6v")]
z_index = 10
position = Vector2(-203, -143)
VAR_SPEED = 15.0
RESPAWN_POINT = Vector2(-270, -270)
hasWand = true
editableVars = ["VAR_NAME", null]
CAMERA_LIMIT_LEFT = -812
metadata/objectName = "Jogador"
metadata/Interactable = true

[node name="SelectedManager" type="Node" parent="Player"]
script = ExtResource("9_kt8cb")

[node name="InteractionManager" type="Node" parent="Player"]
script = ExtResource("14_m1u6v")

[node name="UI" type="CanvasLayer" parent="Player/InteractionManager"]
process_mode = 3

[node name="ItemInteractionPanel" type="Panel" parent="Player/InteractionManager/UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Player/InteractionManager/UI/ItemInteractionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ItemMessageBox" type="VBoxContainer" parent="Player/InteractionManager/UI/ItemInteractionPanel/MarginContainer"]
layout_mode = 2

[node name="ItemName" type="Label" parent="Player/InteractionManager/UI/ItemInteractionPanel/MarginContainer/ItemMessageBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Item teste"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemDescription" type="RichTextLabel" parent="Player/InteractionManager/UI/ItemInteractionPanel/MarginContainer/ItemMessageBox"]
layout_mode = 2
text = "Essa é a descrição de um item utilizado para testes e será substituida assim que um item verdadeira for instanciado e uma interação ser realizada."
fit_content = true

[node name="CloseButton" type="Button" parent="Player/InteractionManager/UI/ItemInteractionPanel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Fechar"

[node name="DialogManager" type="Node" parent="Player"]
script = ExtResource("15_pxbtr")

[node name="AttributeEditorManager" type="Node" parent="Player"]
script = ExtResource("6_j81f7")

[node name="AttributeEditorUI" type="CanvasLayer" parent="Player/AttributeEditorManager"]
visible = false

[node name="Panel" type="PanelContainer" parent="Player/AttributeEditorManager/AttributeEditorUI"]
z_index = -1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -397.0
offset_top = -216.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_eue4q")

[node name="MarginContainer" type="MarginContainer" parent="Player/AttributeEditorManager/AttributeEditorUI/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Player/AttributeEditorManager/AttributeEditorUI/Panel/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Player/AttributeEditorManager/AttributeEditorUI/Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="SelectedName" type="Label" parent="Player/AttributeEditorManager/AttributeEditorUI/Panel/MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Item teste"

[node name="Button" type="Button" parent="Player/AttributeEditorManager/AttributeEditorUI/Panel/MarginContainer/VBox/Header"]
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "X"

[node name="AttributeList" type="VBoxContainer" parent="Player/AttributeEditorManager/AttributeEditorUI/Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_ja7de")

[node name="IntEdit" parent="Player/AttributeEditorManager/AttributeEditorUI/Panel/MarginContainer/VBox/AttributeList" instance=ExtResource("25_2upgb")]
layout_mode = 2

[node name="FloatEdit" parent="Player/AttributeEditorManager/AttributeEditorUI/Panel/MarginContainer/VBox/AttributeList" instance=ExtResource("26_ee4y7")]
layout_mode = 2

[node name="StringEdit" parent="Player/AttributeEditorManager/AttributeEditorUI/Panel/MarginContainer/VBox/AttributeList" instance=ExtResource("27_rlwgt")]
layout_mode = 2

[node name="BooleanEdit" parent="Player/AttributeEditorManager/AttributeEditorUI/Panel/MarginContainer/VBox/AttributeList" instance=ExtResource("28_4nfaa")]
layout_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2(69, 143)
